# elysium

./: .gitignore  LICENSE  README.md
ai-swarm/: README.md  architecture.md  requirements.txt
ai-swarm/agents/: __init__.py  companion_agent.py  creative_agent.py  researcher_agent.py
ai-swarm/core/: base_agent.py  llm_client.py  self_improvement_loop.py  swarm_memory.py  swarm_orchestrator.py  tool_registry.py  vector_memory.py
ai-swarm/examples/: basic_research_swarm.py
code-examples/: README.md
code-examples/agent-scheduler/: README.md  swatch_beat_scheduler.py  xcoin_payment_scheduler.py
code-examples/grok-launcher/: Cargo.toml  README.md
code-examples/grok-launcher/src/: main.rs
code-examples/swatch-beat/: README.md  swatch_beat.py
code-examples/time-utilities/: combined_time.py
code-examples/unix-timestamp/: README.md  unix_timestamp.py
code-examples/xcoin/: README.md  simple_xcoin_wallet.py
code-examples/xcoin/rust_xcoin_client/: Cargo.toml  README.md
code-examples/xcoin/rust_xcoin_client/src/: main.rs
docs/: ai-agent-swarms.md  blockchain-xcoin-deep-dive.md  corporate-structure.md  decentralized-oracles.md  grok-launcher.md  mesh-networking-deep-dive.md  prototypes-overview.md  solana-integration.md  solana-payment-program-design.md
programs/solana-payment-program/: Anchor.toml  Cargo.toml
programs/solana-payment-program/src/: lib.rs
